--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.6",
     "com.unity.ugui": "1.0.0",
+	"com.unity.vectorgraphics": "2.0.0-preview.17",
     "com.unity.visualeffectgraph": "10.4.0",
     "com.unity.xr.arcore": "4.0.12",
     "com.unity.xr.arfoundation": "4.0.12",
